Fix spacing issue

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -24,9 +24,11 @@
 .home__socials {
   display: flex;
   justify-content: center;
-  gap: 1rem;
-  column-gap: 1.75rem;
   margin: 1.5rem 0;
+}
+
+.home__socials > *:not(:last-child) {
+  margin-right: 1.7rem;
 }
 
 .home__social-link {
